# Locaify

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
locaify/: __init__.py  __main__.py
locaify/core/: config.py  database.py  models.py
tests/: test_config.py  test_database.py  test_metadata.py  test_models.py  test_scanner.py
