[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "locaify"
version = "0.1.0"
description = "A keyboard-driven terminal music player for people who care how their terminal looks"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Locaify Team" },
]
keywords = ["music", "player", "tui", "terminal", "textual", "cli", "audio", "catppuccin", "ricing", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Terminals",
]
requires-python = ">=3.10"
dependencies = [
    "textual>=0.60.0",
    "rich>=13.7.0",
    "pygame>=2.5.0",
    "mutagen>=1.47.0",
    "Pillow>=10.2.0",
    "platformdirs>=4.1.0",
    "rapidfuzz>=3.6.0",
    "httpx>=0.27.0",
    "pylast>=5.2.0",
    "syncedlyrics>=0.4.0",
    "keyring>=24.0.0",
    "tomli-w>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
audio-full = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "pydub>=0.25.1",
]
notifications = [
    "plyer>=2.1.0",
]
linux = [
    "dbus-python>=1.3.2",
    "pynput>=1.7.7",
]
windows = [
    "pynput>=1.7.7",
]
all = [
    "locaify[audio-full]",
    "locaify[notifications]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-watch>=4.2.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-Pillow",
    "types-pygments",
    "pre-commit>=3.7.0",
    "textual-dev>=0.60.0",
]

[project.scripts]
locaify = "locaify.__main__:main"

[project.urls]
Homepage = "https://github.com/krishiv2489/locaify"
Repository = "https://github.com/krishiv2489/Locaify"
Issues = "https://github.com/krishiv2489/Locaify/issues"
Changelog = "https://github.com/krishiv2489/Locaify/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["locaify"]

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/tests", "/scripts", "/docs", "*.pyc", "__pycache__", ".venv", ".pytest_cache", ".mypy_cache", ".ruff_cache"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["locaify", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "TCH", "RUF", "ANN", "PTH", "G"]
ignore = ["ANN001", "ANN002", "ANN003", "ANN101", "ANN102", "ANN201", "ANN202", "E501", "B008", "TCH003"]

[tool.ruff.lint.isort]
known-first-party = ["locaify"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = ["pygame.*", "sounddevice.*", "soundfile.*", "mutagen.*", "pylast.*", "syncedlyrics.*", "plyer.*", "dbus.*", "pynput.*", "pydub.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--tb=short", "--strict-markers", "-ra"]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests that require real audio hardware",
    "linux_only: marks tests that only run on Linux",
    "windows_only: marks tests that only run on Windows",
]
filterwarnings = ["ignore::DeprecationWarning:pygame", "ignore::DeprecationWarning:mutagen"]

[tool.coverage.run]
source = ["locaify"]
branch = true
omit = ["locaify/__main__.py", "locaify/ui/*", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "if __name__ == .__main__.:", "raise NotImplementedError", "\\.\\.\\.+"]
